[package]
name = "rmrs"
version = "0.1.0"
authors = ["Christian Steimel <me@C14L.com>"]
edition = "2018"

[dependencies]
actix-cors = "0.1"
actix-files = "0.1"
actix-rt = "0.2"
actix-session = "0.2"
actix-web = "1.0"
futures = "0.1"
env_logger = "0.6"
bytes = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
dirs = "2.0"
reqwest = "=0.9.17"
redis = "0.11"
uuid = "0.7"
short-crypt = "1.0.13"

# redis_db = { url = "redis://127.0.0.1/", pool_size = 10 }
# pg_db = { url = "postgres://rmrsuser:plaplapla@localhost:5432/rmrs", pool_size = 10 }
